[workspace]
members = [
    "dimensionless_crawler_core",
    "server",
]
    

[patch.crates-io]
# leave patches empty for now
[package]
name = "crawler_core"
version = "0.1.0"
authors = ["Dimesnionless Developments <contact@dimensionlessdevelopments.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.13.2"
surf = "2.3.2"
html5ever = "0.26.0"
url = "2.5.7"