[package]
name = "dimensionless_crawler_core"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt", "macros"] }
scraper = "0.13"
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
