[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.4"
tower-http = { version = "0.4", features = ["fs"] }
dimensionless_crawler_core = { path = "../dimensionless_crawler_core" }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }